objects/Twilio_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <label>Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Country_Code__c</fullName>
        <label>Default Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Number__c</fullName>
        <label>From Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Callback_URL__c</fullName>
        <label>SMS Status Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <label>Twilio Setting</label>
</CustomObject>